--- a/_school-events/Highlights/2025.md
+++ b/_school-events/Highlights/2025.md
@@ -5,4 +5,7 @@ variant: tiptap
 description: ""
 third_nav_title: Highlights
 ---
+<div class="iframe-wrapper">
+<iframe allowfullscreen="true" frameborder="0" src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FFuchunPrimarySchool.Singapore%2Fposts%2Fpfbid0QDW1nKMQbr2NgzdvYiqBuA6MiZVb3SYPmvc694otQGUVPMVPJoAxtVaTBwu49CiCl&amp;show_text=true&amp;width=500"></iframe>
+</div>
 <p></p>
