{"message":"Update file: 2025.md","userId":"33227","fileName":"2025.md"}

--- a/_school-events/Highlights/2025.md
+++ b/_school-events/Highlights/2025.md
@@ -5,7 +5,42 @@ variant: tiptap
 description: ""
 third_nav_title: Highlights
 ---
+<h4>Learning Carnival</h4>
+<p>At Fuchun Primary, we believe that learning is most impactful when it
+is engaging, hands-on, and meaningful.</p>
+<p>This year’s <strong>Learning Carnival</strong> was a vibrant celebration
+of curiosity and joyful discovery. Students across all levels participated
+in interactive activities, explored various learning zones, and took on
+challenges that brought learning beyond the classroom.</p>
+<p>Students experienced the joy of learning beyond the classroom, making
+it a meaningful and memorable day for all.</p>
 <div class="iframe-wrapper">
-<iframe allowfullscreen="true" frameborder="0" src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FFuchunPrimarySchool.Singapore%2Fposts%2Fpfbid0QDW1nKMQbr2NgzdvYiqBuA6MiZVb3SYPmvc694otQGUVPMVPJoAxtVaTBwu49CiCl&amp;show_text=true&amp;width=500"></iframe>
+<iframe style="border:none;overflow:hidden" height="476" width="476" allowfullscreen="true" frameborder="0" src="https://www.facebook.com/plugins/video.php?height=476&amp;href=https%3A%2F%2Fwww.facebook.com%2FFuchunPrimarySchool.Singapore%2Fvideos%2F704463378961236%2F&amp;show_text=false&amp;width=476&amp;t=0"></iframe>
+</div>
+<h4>Eco Enzyme Outreach Event</h4>
+<p></p>
+<div class="iframe-wrapper">
+<iframe style="border:none;overflow:hidden" height="250" width="500" allowfullscreen="true" frameborder="0" src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FFuchunPrimarySchool.Singapore%2Fposts%2Fpfbid025nfGoaryDKoqU8FihGubUtZDbzjcwfKoSd87Sr8z8F2EqW7xNFhBnSAe3P9pyfFnl&amp;show_text=true&amp;width=500"></iframe>
+</div>
+<h4>Pesta Bahasa</h4>
+<p></p>
+<div class="iframe-wrapper">
+<iframe style="border:none;overflow:hidden" height="476" width="476" allowfullscreen="true" frameborder="0" src="https://www.facebook.com/plugins/video.php?height=476&amp;href=https%3A%2F%2Fwww.facebook.com%2FFuchunPrimarySchool.Singapore%2Fvideos%2F709158198514772%2F&amp;show_text=false&amp;width=476&amp;t=0"></iframe>
+</div>
+<h4>Gema Lebaran @ Woodgrove</h4>
+<p>Our energetic Primary 2 pupils charmed the audience at Gema Lebaran @
+Woodgrove 2025 with their delightful storytelling and creative performance
+of Tok Mamat.</p>
+<p>From dancing ducks to singing kittens, they brought Tok Mamat’s magical
+animal friends to life—filling the stage with laughter, colour, and cheer!</p>
+<p>Well done, young performers! You’ve made us proud with your spirit and
+imagination.</p>
+<div class="iframe-wrapper">
+<iframe style="border:none;overflow:hidden" height="476" width="476" allowfullscreen="true" frameborder="0" src="https://www.facebook.com/plugins/video.php?height=476&amp;href=https%3A%2F%2Fwww.facebook.com%2FFuchunPrimarySchool.Singapore%2Fvideos%2F739828588849604%2F&amp;show_text=false&amp;width=476&amp;t=0"></iframe>
+</div>
+<h4>Eco Enzyme Outreach Event</h4>
+<p></p>
+<div class="iframe-wrapper">
+<iframe style="border:none;overflow:hidden" height="625" width="500" allowfullscreen="true" frameborder="0" src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FFuchunPrimarySchool.Singapore%2Fposts%2Fpfbid026xG7KoQN32xjbeeWmxSXdACWoj3R58r2yVT3sGKLBRuxMCy8c7pCYpGYHhvhMYeJl&amp;show_text=true&amp;width=500"></iframe>
 </div>
 <p></p>
