--- a/_school-events/Highlights/2025.md
+++ b/_school-events/Highlights/2025.md
@@ -38,7 +38,7 @@ imagination.</p>
 <div class="iframe-wrapper">
 <iframe style="border:none;overflow:hidden" height="476" width="476" allowfullscreen="true" frameborder="0" src="https://www.facebook.com/plugins/video.php?height=476&amp;href=https%3A%2F%2Fwww.facebook.com%2FFuchunPrimarySchool.Singapore%2Fvideos%2F739828588849604%2F&amp;show_text=false&amp;width=476&amp;t=0"></iframe>
 </div>
-<h4>Eco Enzyme Outreach Event</h4>
+<h4>Primary 2 Chinese Language ALP</h4>
 <p></p>
 <div class="iframe-wrapper">
 <iframe style="border:none;overflow:hidden" height="625" width="500" allowfullscreen="true" frameborder="0" src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FFuchunPrimarySchool.Singapore%2Fposts%2Fpfbid026xG7KoQN32xjbeeWmxSXdACWoj3R58r2yVT3sGKLBRuxMCy8c7pCYpGYHhvhMYeJl&amp;show_text=true&amp;width=500"></iframe>
