{"message":"Update file: 2025.md","userId":"33227","fileName":"2025.md"}

--- a/_school-events/Highlights/2025.md
+++ b/_school-events/Highlights/2025.md
@@ -18,7 +18,12 @@ it a meaningful and memorable day for all.</p>
 <iframe style="border:none;overflow:hidden" height="476" width="476" allowfullscreen="true" frameborder="0" src="https://www.facebook.com/plugins/video.php?height=476&amp;href=https%3A%2F%2Fwww.facebook.com%2FFuchunPrimarySchool.Singapore%2Fvideos%2F704463378961236%2F&amp;show_text=false&amp;width=476&amp;t=0"></iframe>
 </div>
 <h4>Pesta Bahasa</h4>
-<p></p>
+<p>Our Primary 2 and 4 Malay students showcased their confidence and creativity
+at <strong>Pesta Bahasa 2025</strong> through engaging Speech and Drama performances.</p>
+<p>The event concluded with a spirited <strong>Dikir Barat</strong> performance
+by our Primary 5 students, earning applause from an appreciative audience.</p>
+<p>Well done to all students and teachers for making it a meaningful celebration
+of language and culture!</p>
 <div class="iframe-wrapper">
 <iframe style="border:none;overflow:hidden" height="476" width="476" allowfullscreen="true" frameborder="0" src="https://www.facebook.com/plugins/video.php?height=476&amp;href=https%3A%2F%2Fwww.facebook.com%2FFuchunPrimarySchool.Singapore%2Fvideos%2F709158198514772%2F&amp;show_text=false&amp;width=476&amp;t=0"></iframe>
 </div>
@@ -37,15 +42,18 @@ imagination.</p>
 <p>Our <strong>Eco Enzyme Outreach Event</strong> was a successful collaboration
 between the Environmental Science Club and the Woodgrove community. Students
 repurposed used milk bags and bottles to create DIY eco enzyme kits, enabling
-residents to try their own at home using fruit peels and natural ingredients.</p>
-<p>The booth attracted participants of all ages and sparked interest in sustainable
-living. We are proud of our students for championing environmental care
-in such a thoughtful and creative way.</p>
+residents to try their own at home using fruit peels and natural ingredients.
+We are proud of our students for championing environmental care in such
+a thoughtful and creative way.</p>
 <div class="iframe-wrapper">
 <iframe style="border:none;overflow:hidden" height="625" width="500" allowfullscreen="true" frameborder="0" src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FFuchunPrimarySchool.Singapore%2Fposts%2Fpfbid026xG7KoQN32xjbeeWmxSXdACWoj3R58r2yVT3sGKLBRuxMCy8c7pCYpGYHhvhMYeJl&amp;show_text=true&amp;width=500"></iframe>
 </div>
-<p></p>
 <h4>Primary 2 Chinese Language ALP</h4>
+<p>Our Primary 2 students demonstrated creativity, confidence, and strong
+Chinese language skills in this year’s <strong>Applied Learning Programme (ALP)</strong>.</p>
+<p>Their performances reflected the hard work and dedication they put into
+learning. We look forward to providing more enriching experiences to support
+their continued growth in the language.</p>
 <div class="iframe-wrapper">
 <iframe style="border:none;overflow:hidden" height="683" width="500" allowfullscreen="true" frameborder="0" src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FFuchunPrimarySchool.Singapore%2Fposts%2Fpfbid025nfGoaryDKoqU8FihGubUtZDbzjcwfKoSd87Sr8z8F2EqW7xNFhBnSAe3P9pyfFnl&amp;show_text=true&amp;width=500"></iframe>
 </div>
