{"message":"Update file: 2025.md","userId":"33227","fileName":"2025.md"}

--- a/_school-events/Highlights/2025.md
+++ b/_school-events/Highlights/2025.md
@@ -7,7 +7,7 @@ third_nav_title: Highlights
 ---
 <blockquote>
 <p>Follow us on our official <a href="https://www.facebook.com/FuchunPrimarySchool.Singapore/" rel="noopener nofollow" target="_blank">Facebook</a> and
-<a href="https://www.instagram.com/fuchunprimaryofficial/" rel="noopener nofollow" target="_blank">Instagram</a>pages for more photos and stories from our school events.</p>
+<a href="https://www.instagram.com/fuchunprimaryofficial/" rel="noopener nofollow" target="_blank">Instagram</a>for more photos and stories from our school events.</p>
 </blockquote>
 <h4>Learning Carnival</h4>
 <p>At Fuchun Primary, we believe that learning is most impactful when it
